fix build tool alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -92,6 +92,12 @@
     .responsive-align {
         text-align: center !important;
     }
+
+    .more-features .ui.items .item {
+        margin:auto !important;
+        text-align:center;
+        padding:0px 30px !important;
+    }
 }
 
 .build-tools {
